; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dm_local.c_dmlab_trigger_lookat.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dm_local.c_dmlab_trigger_lookat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEEPMIND_OVERRIDE_LOOKAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dmlab_trigger_lookat(i32 %0, i64 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* @DEEPMIND_OVERRIDE_LOOKAT, align 4
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = ptrtoint i32* %14 to i64
  %16 = call i32 @trap_DeepmindCallback(i32 %9, i64 %11, i64 %12, i64 %13, i64 %15, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  ret void
}

declare dso_local i32 @trap_DeepmindCallback(i32, i64, i64, i64, i64, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
